fix(design): Press list component, fixed spacing

--- a/src/scss/components/common/press-list.scss
+++ b/src/scss/components/common/press-list.scss
@@ -3,6 +3,9 @@
   margin: 0;
   line-height: 1.3;
 
+  li {
+    margin-bottom: 1rem;
+  }
 
   a {
     font-weight: bold;
